--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -1,3 +1,40 @@
 @{
   Layout = "_Layout";
 }
+
+<div class="jumbotron text-center">
+  <h2>Welcome Back To Dr. Sillystringz's Factory</h2>
+</div>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          @Html.ActionLink("Home", "Index", "Home", null, new { @class="nav-link" })
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Engineer
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Engineers", "Index", "Engineers", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Engineer", "Create", "Engineers", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Machine
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Machines", "Index", "Machines", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Machine", "Create", "Machines", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<hr />
+<div>
+  <img src='~/img/background.jpg' class="img-fluid" alt="a hammer" />
+</div>
