--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -3,3 +3,72 @@
 }
 
 @using Factory.Models;
+
+<div class="jumbotron text-center">
+  <h2>All Engineers</h2>
+</div>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          @Html.ActionLink("Home", "Index", "Home", null, new { @class="nav-link" })
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Engineer
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Engineers", "Index", "Engineers", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Engineer", "Create", "Engineers", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Machine
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Machines", "Index", "Machines", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Machine", "Create", "Machines", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+      </ul>
+      <div>
+        @using (Html.BeginForm("Index","Engineers",FormMethod.Get))
+        { 
+          <div class="d-flex" role="search">
+            @Html.TextBox("SearchString", null, new { type="search", placeholder = "Search", @class="form-control me-2"}) 
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </div>
+        }
+      </div>
+    </div>
+  </div>
+</nav>
+<hr />
+<div>
+  @if (@Model.Count == 0)
+  {
+    <h3>No engineers have been added yet!</h3>
+  } 
+  
+<table class="table">
+  <thead>
+    <th scope="col">Engineer Name</th>
+    <th scope="col">Status</th>
+  </thead>
+  <tbody class="table-group-divider">
+    @foreach (Engineer engineer in Model)
+    {
+      <tr>
+        <td class="col-sm-1">
+          @Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId })
+        </td>
+        <td class="col-sm-2">
+          @(engineer.IsWorking ? "Working" : "Idle" )
+        </td>
+      </tr>
+    }
+  </tbody>
+</table>
+</div>
