update button group

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -54,7 +54,7 @@
   }
 </div>
 <div class="mt-5">
-  <div class="btn-group btn-group" role="group" aria-label="Large button group">
+  <div class="btn-group btn-group" role="group" aria-label="Default button group">
     <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Assign Machines", "Create", "Machines")</button>
     <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Update Engineer", "Edit", new { id = Model.EngineerId})</button>
     <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Fire Engineer", "Delete", new { id = Model.EngineerId})</button>
