--- a/Factory/Views/Engineers/Delete.cshtml
+++ b/Factory/Views/Engineers/Delete.cshtml
@@ -3,3 +3,59 @@
 }
 
 @model Factory.Models.Engineer
+
+<div class="jumbotron text-center">
+  <h2>Are You SURE to FIRE @Html.DisplayFor(model => model.Name)?</h2>
+</div>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          @Html.ActionLink("Home", "Index", "Home", null, new { @class="nav-link" })
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Engineer
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Engineers", "Index", "Engineers", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Engineer", "Create", "Engineers", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Machine
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Machines", "Index", "Machines", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Machine", "Create", "Machines", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<hr />
+<div>
+  @if(Model.JoinEntities.Count == 0)
+  {
+    <h4>@Html.DisplayFor(model => model.Name) is Idel</h4>
+  }
+  else
+  {
+    <h4>@Html.DisplayFor(model => model.Name) is Working</h4>
+  }
+</div>
+<div>
+  @using (Html.BeginForm())
+  {
+    <button type="submit" class="btn btn-danger">Fire</button>
+  }
+  <div class="mt-5">
+    <div class="btn-group btn-group" role="group" aria-label="Default button group">
+      <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Update Engineer", "Edit", new { id = Model.EngineerId})</button>
+      <button type="button" class="btn btn-outline-dark">@Html.ActionLink("All Engineers", "Index")</button>
+    </div>
+  </div>
+</div>
