--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -57,6 +57,6 @@
   <div class="btn-group btn-group" role="group" aria-label="Default button group">
     <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Assign Machines", "Create", "Machines")</button>
     <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Update Engineer", "Edit", new { id = Model.EngineerId})</button>
-    <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Fire Engineer", "Delete", new { id = Model.EngineerId})</button>
+    <button type="button" class="btn btn-outline-danger">@Html.ActionLink("Fire Engineer", "Delete", new { id = Model.EngineerId})</button>
   </div>
 </div>
