--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -4,3 +4,70 @@
 
 @using Factory.Models;
 @model List<Factory.Models.Machine>;
+
+<div class="jumbotron text-center">
+  <h2>All Machines</h2>
+</div>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          @Html.ActionLink("Home", "Index", "Home", null, new { @class="nav-link" })
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Engineer
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Engineers", "Index", "Engineers", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Engineer", "Create", "Engineers", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Machine
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Machines", "Index", "Machines", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Machine", "Create", "Machines", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+      </ul>
+      <div>
+        @using (Html.BeginForm("Index","Machines",FormMethod.Get))
+        { 
+          <div class="d-flex" role="search">
+            @Html.TextBox("SearchString", null, new { type="search", placeholder = "Search", @class="form-control me-2"}) 
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </div>
+        }
+      </div>
+    </div>
+  </div>
+</nav>
+<hr />
+<div>
+  @if (Model.Any())
+  {
+    <ul>
+      @foreach(Machine machine in Model)
+      {
+        <li>
+          <div class="row mb-2">
+            <div class="col-sm-3">
+              @Html.ActionLink($"{machine.Name}", "Details", new { id = machine.MachineId }) 
+            </div>
+            <div class="col-sm-3">
+              @machine.NextInspectionDate
+            </div>
+          </div>
+        </li> 
+      }
+    </ul>
+  }
+  else
+  {
+    <h3>No machines have been added yet!</h3>
+  }
+</div>
