--- a/Factory/Views/Machines/Edit.cshtml
+++ b/Factory/Views/Machines/Edit.cshtml
@@ -3,3 +3,79 @@
 }
 
 @model Factory.Models.Machine;
+
+<div class="jumbotron text-center">
+  <h2>Update Info of @Html.DisplayFor(model => model.Name)</h2>
+</div>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          @Html.ActionLink("Home", "Index", "Home", null, new { @class="nav-link" })
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Engineer
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Engineers", "Index", "Engineers", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Engineer", "Create", "Engineers", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Machine
+          </a>
+          <ul class="dropdown-menu">
+            <li>@Html.ActionLink("All Machines", "Index", "Machines", null, new { @class="dropdown-item" })</li>
+            <li>@Html.ActionLink("Add New Machine", "Create", "Machines", null, new { @class="dropdown-item" })</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<hr />
+<div class="d-flex">
+  @using (Html.BeginForm())
+  {
+    @Html.HiddenFor(model => model.MachineId)
+    <div class="form-group row mb-3">
+      @Html.LabelFor(model => model.Name, new { @class="col-form-label col-md-6"})
+      <div class="col-md-6">
+        @Html.TextBoxFor(model => model.Name, new { @class="form-control", @required="required"})
+      </div>
+    </div>
+    <div class="form-group row mb-3">
+      @Html.LabelFor(model => model.LastInspectionDate, new { @class="col-form-label col-md-6"})
+      <div class="col-md-6">
+        @Html.TextBoxFor(model => model.LastInspectionDate, new { type = "date", @class="form-control", @required="required"})
+      </div>
+    </div>
+    <div class="form-group row mb-3">
+      @Html.LabelFor(model => model.NextInspectionDate, new { @class="col-form-label col-md-6"})
+      <div class="col-md-6">
+        @Html.TextBoxFor(model => model.NextInspectionDate, new { type = "date", @class="form-control", @required="required"})
+      </div>
+    </div>
+    <div class="form-group row mb-3">
+      @Html.Label("Select Engineer", null, new { @class="col-form-label col-md-6"})
+      <div class="col-md-6">
+        @Html.DropDownList("EngineerId", null, new { @class="form-control" })
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="col-md-6 offset-md-6">   
+        <button type="submit" class="btn btn-outline-dark">Update</button>
+      </div>
+    </div>
+  }
+</div>
+<div class="mt-5">
+  <div class="btn-group btn-group" role="group" aria-label="Default button group">
+<button type="button" class="btn btn-outline-dark">@Html.ActionLink("Assign Enginner", "AddEngineer", new { id = Model.MachineId })</button>
+    <button type="button" class="btn btn-outline-dark">@Html.ActionLink("All Machines", "Index")</button>
+    <button type="button" class="btn btn-outline-danger">@Html.ActionLink("Remove Machine", "Delete", new { id = Model.MachineId})</button>
+  </div>
+</div>
