--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -50,11 +50,14 @@
     <h5>Assinged Engineer:</h5>
     @foreach(var join in Model.JoinEntities)
     {
-      @Html.Hidden("joinId", @join.EngineerMachineId)
-      <li>
-        @join.Engineer.Name 
-        <button type="submit" class="btn btn-outline-danger">Unassign</button>
-      </li>
+      @using (Html.BeginForm("DeleteEngineer", "Machines"))
+      {
+        @Html.Hidden("joinId", @join.EngineerMachineId)
+        <li>
+          @join.Engineer.Name  
+          <button type="submit" class="btn btn-outline-danger">Unassign</button>
+        </li>
+      }
     }
   }
 </div>
