--- a/Factory/Views/Machines/AddEngineer.cshtml
+++ b/Factory/Views/Machines/AddEngineer.cshtml
@@ -5,7 +5,7 @@
 @model Factory.Models.Machine;
 
 <div class="jumbotron text-center">
-  <h2>Are You SURE to REMOVE @Html.DisplayFor(model => model.Name)?</h2>
+  <h2>Add A Machine</h2>
 </div>
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
@@ -37,15 +37,20 @@
   </div>
 </nav>
 <hr />
-<div>
+<div class="">
   @using (Html.BeginForm())
   {
-    <button type="submit" class="btn btn-danger">Remove</button>
-  }
-  <div class="mt-5">
-    <div class="btn-group btn-group" role="group" aria-label="Default button group">
-      <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Update Machine", "Edit", new { id = Model.MachineId})</button>
-      <button type="button" class="btn btn-outline-dark">@Html.ActionLink("All Machine", "Index")</button>
+    @Html.HiddenFor(model => model.MachineId)
+    <div class="form-group row mb-3">
+      @Html.Label("Select Engineer", null, new { @class="col-form-label col-md-2"})
+      <div class="col-md-4">
+        @Html.DropDownList("EngineerId", null, new { @class="form-control" })
+      </div>
     </div>
-  </div>
+    <div class="form-group row">
+      <div class="col-md-4 offset-md-2">   
+        <button type="submit" class="btn btn-outline-dark">Update</button>
+      </div>
+    </div>
+  }
 </div>
