--- a/Factory/Views/Machines/AddEngineer.cshtml
+++ b/Factory/Views/Machines/AddEngineer.cshtml
@@ -5,7 +5,7 @@
 @model Factory.Models.Machine;
 
 <div class="jumbotron text-center">
-  <h2>Add A Machine</h2>
+  <h2>Assign An Engineer</h2>
 </div>
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
