--- a/Factory/Views/Engineers/Edit.cshtml
+++ b/Factory/Views/Engineers/Edit.cshtml
@@ -37,29 +37,33 @@
   </div>
 </nav>
 <hr />
-<div class="d-flex">
+
   @using (Html.BeginForm())
   {
     @Html.HiddenFor(model => model.EngineerId)
     <div class="form-group row mb-3">
       @Html.LabelFor(model => model.Name, new { @class="col-form-label col-sm-2"})
-      <div class="col-sm-10">
-        @Html.EditorFor(model => model.Name, new { @class="form-control", @required="required"})
+      <div class="col-sm-3">
+        @Html.TextBoxFor(model => model.Name, new { @class="form-control", @required="required"})
       </div>
     </div>
-
-    @Html.CheckBoxFor(model => model.IsWorking, new { @checked = "checked" })
+    <div class="form-group row mb-3">
+      @Html.Label("Working Status", null, new { @class="col-form-label col-sm-2"})
+      <div class="col-sm-3 mt-2">
+       @Html.EditorFor(model => model.IsWorking)
+      </div>
+    </div>
+    
 
     <div class="form-group row">
-      <div class="col-sm-10 offset-sm-2">   
+      <div class="col-sm-8 offset-sm-2">   
         <button type="submit" class="btn btn-outline-dark">Update</button>
       </div>
     </div>
   }
-</div>
 <div class="mt-5">
   <div class="btn-group btn-group" role="group" aria-label="Default button group">
-    <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Assign Machines", "Create", "Machines")</button>
+    <button type="button" class="btn btn-outline-dark">@Html.ActionLink("Assign Machines", "AddMachine", new { id = Model.EngineerId })</button>
     <button type="button" class="btn btn-outline-dark">@Html.ActionLink("All Engineers", "Index")</button>
     <button type="button" class="btn btn-outline-danger">@Html.ActionLink("Fire Engineer", "Delete", new { id = Model.EngineerId})</button>
   </div>
